cmake_minimum_required(VERSION 3.5)
project(MyCloudSystem)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    cloud/cloud.c
    cloud/cloud.h
    cloud/cloud_connect.c
    cloud/cloud_connect.h
    cloud/cloud_pal.c
    cloud/cloud_pal.h
    cloud/device_status.c
    cloud/device_status.h
    cloud/smartconfig.c
    cloud/smartconfig.h
    common/button_if.c
    common/button_if.h
    common/common.h
    common/gpio_if.c
    common/gpio_if.h
    common/i2c_if.c
    common/i2c_if.h
    common/i2s_if.c
    common/i2s_if.h
    common/network_if.c
    common/network_if.h
    common/startup_ccs.c
    common/startup_ewarm.c
    common/startup_gcc.c
    common/timer_if.c
    common/timer_if.h
    common/uart_if.c
    common/uart_if.h
    common/udma_if.c
    common/udma_if.h
    common/utils_if.c
    common/utils_if.h
    common/wdt_if.c
    common/wdt_if.h
    driverlib/adc.c
    driverlib/adc.h
    driverlib/aes.c
    driverlib/aes.h
    driverlib/camera.c
    driverlib/camera.h
    driverlib/cpu.c
    driverlib/cpu.h
    driverlib/crc.c
    driverlib/crc.h
    driverlib/debug.h
    driverlib/des.c
    driverlib/des.h
    driverlib/flash.c
    driverlib/flash.h
    driverlib/gpio.c
    driverlib/gpio.h
    driverlib/hwspinlock.c
    driverlib/hwspinlock.h
    driverlib/i2c.c
    driverlib/i2c.h
    driverlib/i2s.c
    driverlib/i2s.h
    driverlib/interrupt.c
    driverlib/interrupt.h
    driverlib/pin.c
    driverlib/pin.h
    driverlib/prcm.c
    driverlib/prcm.h
    driverlib/rom.h
    driverlib/rom_map.h
    driverlib/rom_patch.h
    driverlib/sdhost.c
    driverlib/sdhost.h
    driverlib/shamd5.c
    driverlib/shamd5.h
    driverlib/spi.c
    driverlib/spi.h
    driverlib/systick.c
    driverlib/systick.h
    driverlib/timer.c
    driverlib/timer.h
    driverlib/uart.c
    driverlib/uart.h
    driverlib/udma.c
    driverlib/udma.h
    driverlib/utils.c
    driverlib/utils.h
    driverlib/version.h
    driverlib/wdt.c
    driverlib/wdt.h
    FreeRTOS/source/ARM_CM4/port.c
    FreeRTOS/source/ARM_CM4/portmacro.h
    FreeRTOS/source/include/croutine.h
    FreeRTOS/source/include/event_groups.h
    FreeRTOS/source/include/FreeRTOS.h
    FreeRTOS/source/include/list.h
    FreeRTOS/source/include/mpu_wrappers.h
    FreeRTOS/source/include/portable.h
    FreeRTOS/source/include/projdefs.h
    FreeRTOS/source/include/queue.h
    FreeRTOS/source/include/semphr.h
    FreeRTOS/source/include/StackMacros.h
    FreeRTOS/source/include/task.h
    FreeRTOS/source/include/timers.h
    FreeRTOS/source/MemMang/heap_1.c
    FreeRTOS/source/MemMang/heap_2.c
    FreeRTOS/source/MemMang/heap_3.c
    FreeRTOS/source/MemMang/heap_4.c
    FreeRTOS/source/croutine.c
    FreeRTOS/source/event_groups.c
    FreeRTOS/source/FreeRTOSConfig.h
    FreeRTOS/source/list.c
    FreeRTOS/source/queue.c
    FreeRTOS/source/tasks.c
    FreeRTOS/source/timers.c
    inc/asmdefs.h
    inc/hw_adc.h
    inc/hw_aes.h
    inc/hw_apps_config.h
    inc/hw_apps_rcm.h
    inc/hw_camera.h
    inc/hw_common_reg.h
    inc/hw_des.h
    inc/hw_dthe.h
    inc/hw_flash_ctrl.h
    inc/hw_gpio.h
    inc/hw_gprcm.h
    inc/hw_hib1p2.h
    inc/hw_hib3p3.h
    inc/hw_i2c.h
    inc/hw_ints.h
    inc/hw_mcasp.h
    inc/hw_mcspi.h
    inc/hw_memmap.h
    inc/hw_mmchs.h
    inc/hw_nvic.h
    inc/hw_ocp_shared.h
    inc/hw_shamd5.h
    inc/hw_stack_die_ctrl.h
    inc/hw_timer.h
    inc/hw_types.h
    inc/hw_uart.h
    inc/hw_udma.h
    inc/hw_wdt.h
    middleware/driver/hal/dma_hal.c
    middleware/driver/hal/dma_hal.h
    middleware/driver/hal/gpio_hal.c
    middleware/driver/hal/gpio_hal.h
    middleware/driver/hal/hw_timer.h
    middleware/driver/hal/hw_timer32.c
    middleware/driver/hal/hw_timer32.h
    middleware/driver/hal/interrupt_hal.c
    middleware/driver/hal/interrupt_hal.h
    middleware/driver/hal/rtc_hal.c
    middleware/driver/hal/rtc_hal.h
    middleware/driver/hal/spi_hal.c
    middleware/driver/hal/spi_hal.h
    middleware/driver/hal/uart_hal.c
    middleware/driver/hal/uart_hal.h
    middleware/driver/hal/util64.c
    middleware/driver/hal/util64.h
    middleware/driver/spi_drv.c
    middleware/driver/spi_drv.h
    middleware/driver/uart_drv.c
    middleware/driver/uart_drv.h
    middleware/framework/pm/cc_pm.c
    middleware/framework/pm/cc_pm.h
    middleware/framework/pm/cc_types.h
    middleware/framework/timer/cc_timer.c
    middleware/framework/timer/cc_timer.h
    middleware/soc/cc_io_park.c
    middleware/soc/cc_io_park.h
    middleware/soc/cc_pm_ops.c
    middleware/soc/cc_pm_ops.h
    My/LCD.c
    My/LCD.h
    My/PutChar.c
    My/Stat_Communicate.c
    My/Stat_Communicate.h
    oslib/osi.h
    oslib/osi_freertos.c
    simplelink/include/device.h
    simplelink/include/fs.h
    simplelink/include/netapp.h
    simplelink/include/netcfg.h
    simplelink/include/simplelink.h
    simplelink/include/socket.h
    simplelink/include/trace.h
    simplelink/include/wlan.h
    simplelink/include/wlan_rx_filters.h
    simplelink/source/device.c
    simplelink/source/driver.c
    simplelink/source/driver.h
    simplelink/source/flowcont.c
    simplelink/source/flowcont.h
    simplelink/source/fs.c
    simplelink/source/netapp.c
    simplelink/source/netcfg.c
    simplelink/source/nonos.c
    simplelink/source/nonos.h
    simplelink/source/objInclusion.h
    simplelink/source/protocol.h
    simplelink/source/socket.c
    simplelink/source/spawn.c
    simplelink/source/spawn.h
    simplelink/source/wlan.c
    simplelink/cc_pal.c
    simplelink/cc_pal.h
    simplelink/cc_pal_pm.c
    simplelink/user.h
    user/adc_userinput.c
    user/adc_userinput.h
    includes.h
    main.c
    pinmux.c
    pinmux.h)

add_executable(MyCloudSystem ${SOURCE_FILES})